// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a Select contentBefore and contentAfter 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu10"
    >
      <span
        class="pongo-input-wrapper ___m1z7d80 f10pi13n f1ewtqcl f22iagw f122n59 flvyvdh fc467gg f8qjfyk f8dqhol f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw fvfw249 f45u8dm f1arxnym f151knc1 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 f1vx0exu f1nae43o"
      >
        <span
          class="___ze23s30 f1ewtqcl fyuhxbn f1ysjbbf futmsce frdkuqy"
        >
          hello
        </span>
        <select
          class="___1irr20y f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx fy77jfu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
        >
          <option
            disabled=""
            value=""
          />
          <option
            disabled=""
          >
            This isa test
          </option>
          <option
            disabled=""
            value="test"
          >
            Test
          </option>
        </select>
        <span
          class="___19xy0mj f1ewtqcl fyuhxbn f1ysjbbf futmsce f81rol6"
        >
          test
        </span>
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a basic Select 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu7"
    >
      <span
        class="pongo-input-wrapper ___m1z7d80 f10pi13n f1ewtqcl f22iagw f122n59 flvyvdh fc467gg f8qjfyk f8dqhol f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw fvfw249 f45u8dm f1arxnym f151knc1 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 f1vx0exu f1nae43o"
      >
        <select
          class="___1irr20y f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx fy77jfu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
        >
          <option
            disabled=""
            value=""
          />
        </select>
        <span
          class="___19xy0mj f1ewtqcl fyuhxbn f1ysjbbf futmsce f81rol6"
        >
          <svg
            class="___bx26yj0 f1rqwlx"
            height="20px"
            viewBox="0 0 20 20"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              style="transform: translateY(20%); transition: transform .1s linear;"
            >
              <line
                stroke-linecap="round"
                stroke-width="2px"
                style="transform-origin: center; transform: rotate(45deg); transition: transform .1s linear;"
                x1="1"
                x2="10"
                y1="10"
                y2="10"
              />
              <line
                stroke-linecap="round"
                stroke-width="2px"
                style="transform-origin: center; transform: rotate(-45deg); transition: transform .1s linear;"
                x1="10"
                x2="19"
                y1="10"
                y2="10"
              />
            </g>
          </svg>
        </span>
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a basic Select with an option 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu8"
    >
      <span
        class="pongo-input-wrapper ___m1z7d80 f10pi13n f1ewtqcl f22iagw f122n59 flvyvdh fc467gg f8qjfyk f8dqhol f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw fvfw249 f45u8dm f1arxnym f151knc1 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 f1vx0exu f1nae43o"
      >
        <select
          class="___1irr20y f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx fy77jfu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
        >
          <option
            disabled=""
            value=""
          />
        </select>
        <span
          class="___19xy0mj f1ewtqcl fyuhxbn f1ysjbbf futmsce f81rol6"
        >
          <svg
            class="___bx26yj0 f1rqwlx"
            height="20px"
            viewBox="0 0 20 20"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              style="transform: translateY(20%); transition: transform .1s linear;"
            >
              <line
                stroke-linecap="round"
                stroke-width="2px"
                style="transform-origin: center; transform: rotate(45deg); transition: transform .1s linear;"
                x1="1"
                x2="10"
                y1="10"
                y2="10"
              />
              <line
                stroke-linecap="round"
                stroke-width="2px"
                style="transform-origin: center; transform: rotate(-45deg); transition: transform .1s linear;"
                x1="10"
                x2="19"
                y1="10"
                y2="10"
              />
            </g>
          </svg>
        </span>
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a basic Select with an option and Header 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu9"
    >
      <span
        class="pongo-input-wrapper ___m1z7d80 f10pi13n f1ewtqcl f22iagw f122n59 flvyvdh fc467gg f8qjfyk f8dqhol f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw fvfw249 f45u8dm f1arxnym f151knc1 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 f1vx0exu f1nae43o"
      >
        <select
          class="___1irr20y f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx fy77jfu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
        >
          <option
            disabled=""
            value=""
          />
          <option
            disabled=""
          >
            This isa test
          </option>
          <option
            disabled=""
            value="test"
          >
            Test
          </option>
        </select>
        <span
          class="___19xy0mj f1ewtqcl fyuhxbn f1ysjbbf futmsce f81rol6"
        >
          <svg
            class="___bx26yj0 f1rqwlx"
            height="20px"
            viewBox="0 0 20 20"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              style="transform: translateY(20%); transition: transform .1s linear;"
            >
              <line
                stroke-linecap="round"
                stroke-width="2px"
                style="transform-origin: center; transform: rotate(45deg); transition: transform .1s linear;"
                x1="1"
                x2="10"
                y1="10"
                y2="10"
              />
              <line
                stroke-linecap="round"
                stroke-width="2px"
                style="transform-origin: center; transform: rotate(-45deg); transition: transform .1s linear;"
                x1="10"
                x2="19"
                y1="10"
                y2="10"
              />
            </g>
          </svg>
        </span>
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a disabled Select and applies prop to native select element 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu11"
    >
      <span
        class="pongo-input-wrapper ___5e9pfx0 f10pi13n f1ewtqcl f22iagw f122n59 flvyvdh fc467gg f8qjfyk f8dqhol f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw fvfw249 f45u8dm f1arxnym f151knc1 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo flm3n1z f1pltsua f15x2d8x fhngjcl f5qrn4q f1kndqco f1kc1xys f1d7l9b4"
      >
        <span
          class="___1fxdn52 f1ewtqcl fyuhxbn favx1wl f1f4ibtz frdkuqy"
        >
          hello
        </span>
        <select
          class="___18bnsog f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx fy77jfu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 fdrzuqr favx1wl fgbidd3 f13ta7ih f1arxnym"
        >
          <option
            disabled=""
            value=""
          />
          <option
            disabled=""
          >
            This isa test
          </option>
          <option
            disabled=""
            value="test"
          >
            Test
          </option>
        </select>
        <span
          class="___17560ot f1ewtqcl fyuhxbn favx1wl f1f4ibtz f81rol6"
        >
          test
        </span>
      </span>
    </span>
  </div>
</body>
`;
